2010-11-28 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyepkg.el: Revise epackage specification.

2010-11-27 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypath.el (tinypath-byte-compile-running-p): Add test
	for `command-line-args'.

	* tiny/tinylib.el (ti::package-autoload-create-on-file): Generate
	autoload definitions without *.el file name extension.

2010-11-27 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyepkg.el: Update epackage specification.

2010-11-26 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypath.el (tinypath-byte-compile-running-p): Add check for
	`command-line-args'.

2010-11-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-browse-url-main-interactive):
	Check that `data' is number.

2010-11-21 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibmail.el
	(top level): add mail-utils autoload.
	(ti::mail-mail-simple-p): Remove `require'

	* tiny/tinylibo.el (ti::overlay-remove-region): Remove unused
	variable `ovx'.

	* tiny/tinylibenv.el (ti::win32-cygwin-p): Send `use-cache' to
	`ti::win32-cygwin-p-1'.

	* tiny/tinylibb.el (replace-char-in-string): Restore from previous
	revision.
	(radix): Remove variable `chars' and relocate 'i'.

	* tiny/tinylib.el (ti::package-autoload-create-on-file): Remove unused
	variable `match'. Correct `cond'. Comment out unused variable `match'.
	(ti::file-complete-file-name-word): Remove unused variable `dir'.
	(ti::file-complete-file-name): Comment out unused variable `type'.
	(ti::directory-unix-man-path-root): Remove unused variable `root'.

	* unmaintained/tinylibxe.el (require): New. Add support for 3rd
	parameter NOERROR.
	(count-matches): New. Add support for parameters 2 and 3.
	(frame-parameter): New.
	(help-print-return-message): New alias.

2010-11-20 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibm.el: (byte-compile-warnings): Guard against XEmacs.
	(ti::widen-safe): Remove unused variable `ret'.